Improve the dynamic compilation of class files.